--- a/.github/workflows/ghcr-tbackbot.yml
+++ b/.github/workflows/ghcr-tbackbot.yml
@@ -21,5 +21,5 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Build arm64 image
+      - name: Build multiarch image
         run: docker buildx build . --file ./Containerfile --tag ghcr.io/${{ github.actor }}/${IMAGE_NAME} --platform=linux/arm64,linux/amd64 --push
